--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -1,12 +1,12 @@
 /**
- *  BADGES
+ *  BADGE
  *
  *  Markup:
  *  -------
  *
  *  <ul>
  *    <li class="badge badge--primary">Badge 1</li>
- *    <li class="badge badge--secondary badge--lg">Badge 1</li>
+ *    <li class="badge badge--secondary badge--big">Badge 1</li>
  *  </ul>
  *
  */
