--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,6 +1,15 @@
 /**
- *  BUTTONS
+ *  BUTTON
+ *
+ *  Markup:
+ *  -------
+ *
+ *  <button class="button">Default</button>
+ *  <button class="button button--big">Button big</button>
+ *  <button class="button button--secondary">Button secondary</button>
+ *
  */
+
 
 // reset default buttons
 button {
