--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -1,30 +1,48 @@
 /**
  *  TABLE
+ *
+ *  Markup:
+ *  -------
+ *
+ *  <table class="table">
+ *    <tr>
+ *      <th>First column</th>
+ *      <th>Second column</th>
+ *      <th>Third column</th>
+ *    </tr>
+ *    <tr>
+ *      <td="First column">Blue</td>
+ *      <td="Second column">One</td>
+ *      <td="Third column">My life fades</td>
+ *    </tr>
+ *  </table>
+ *
  */
+
 
 .table {
   background-color: $bgc-table;
-  border: $bd-medium;
+  border: $bd-table;
   border-collapse: collapse;
-  border-radius: $bdr-medium;
   color: $c-table-text;
   max-width: $mwi-table;
   width: $w-table;
 
   th,
   td {
-    border-bottom: $bd-medium;
+    border-bottom: $bd-table;
     padding:  $p-table-cell;
     position: relative;
   }
 
   thead {
-    border-bottom: $bd-medium;
+    border-bottom: $bd-table;
   }
 
   th {
     background-color: $bgc-table-header;
     color: $c-table-heading;
+    font-size: $fz-table-heading;
     font-weight: $fw-table-heading;
     padding: $p-table-heading;
     white-space: nowrap;
@@ -51,12 +69,17 @@
  *    <tr>
  *      <td data-th="First column">Green</td>
  *      <td data-th="Second column">Two</td>
- *      <td data-th="Third column">when the world was powered by the black fuel... and the desert sprouted great cities of pipe and steel. </td>
+ *      <td data-th="Third column">
+ *        when the world was powered by the black fuel... and the desert
+ *        sprouted great cities of pipe and steel.
+ *      </td>
  *    </tr>
  *    <tr>
  *      <td data-th="First column">Yellow</td>
  *      <td data-th="Second column">Three</td>
- *      <td data-th="Third column">A whirlwind of looting, a firestorm of fear. Men began to feed on men. </td>
+ *      <td data-th="Third column">
+ *        A whirlwind of looting, a firestorm of fear.
+ *      </td>
  *    </tr>
  *  </table>
  *
@@ -85,14 +108,14 @@
     }
 
     &:first-child {
-      border-top: $bd-medium;
+      border-top: $bd-table;
     }
   }
 
   th,
   td {
     @include media-breakpoint-up(sm) {
-      border-top: $bd-medium;
+      border-top: $bd-table;
       display: table-cell;
     }
     text-align: left;
