--- a/src/scss/utils/_grid.scss
+++ b/src/scss/utils/_grid.scss
@@ -4,8 +4,8 @@
 
 @if $enable-grid-classes {
   .container {
-    @include make-container();
-    @include make-container-max-widths();
+    @include make-container;
+    @include make-container-max-widths;
   }
 }
 
@@ -16,7 +16,7 @@
 
 @if $enable-grid-classes {
   .container-fluid {
-    @include make-container();
+    @include make-container;
   }
 }
 
@@ -26,19 +26,19 @@
 
 @if $enable-grid-classes {
   .row {
-    @include make-row();
+    @include make-row;
   }
 
   // Remove the negative margin from default .row, then the horizontal padding
   // from all immediate children columns (to prevent runaway style inheritance).
   .no-gutters {
-    margin-right: 0;
     margin-left: 0;
+    margin-right: 0;
 
     > .col,
-    > [class*="col-"] {
-      padding-right: 0;
+    > [class*='col-'] {
       padding-left: 0;
+      padding-right: 0;
     }
   }
 }
@@ -48,5 +48,5 @@
 // Common styles for small and large grid columns
 
 @if $enable-grid-classes {
-  @include make-grid-columns();
+  @include make-grid-columns;
 }
