fix pagination doc

--- a/src/components/_paginator.scss
+++ b/src/components/_paginator.scss
@@ -12,7 +12,7 @@
  *      <a href="#" class="paginator-itemLink">1</a>
  *    </li>
  *    <li class="paginator-item">
- *      <a href="#" class="paginator-itemLink active">2</a>
+ *      <a href="#" class="paginator-itemLink is-active">2</a>
  *    </li>
  *    <li class="paginator-item">
  *      <a href="#" class="paginator-itemLink">3</a>
