fix default li margin bottom

--- a/lib/_settings.scss
+++ b/lib/_settings.scss
@@ -97,7 +97,7 @@ $bdr-medium: $bdr-base !default;
 $fw-strong: $fw-bold !default;
 $mb-p: 1.5em !default;
 $mb-ul: 1em !default;
-$mb-li: 5em !default;
+$mb-li: .5em !default;
 
 // Margin
 $m-xsmall: 2px !default;
