add colored badge var

--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -143,6 +143,7 @@ $container-max-widths: (
 
 // Badges
 $c-badge: $c-text !default;
+$c-badge-colored: $c-text !default;
 $bg-badge: $c-light !default;
 $bdr-badge: $bdr-medium !default;
 $lh-badge: 1.2em !default;
