enhance button components

--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -163,6 +163,7 @@ $badges-color-map: (
 // Buttons
 $bg-button: $c-primary !default;
 $c-button: $c-text !default;
+$c-button-transparent: $c-text !default;
 $bdc-button: $bg-button !default;
 $bd-button: 1px solid $bdc-button !default;
 $bdr-button: $bdr-medium !default;
