--- a/lib/components/_badge.scss
+++ b/lib/components/_badge.scss
@@ -30,6 +30,7 @@
   @each $type, $color in $badges-color-map {
     &--#{$type} {
       background-color: $color;
+      color: $c-badge-colored;
     }
   }
 }
