add color prop to container

--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -25,6 +25,7 @@ $c-link: $c-primary !default;
 $c-link-hover: rgba($c-primary, .8) !default;
 
 $bgc-body: $c-white !default;
+$bgc-container: transparent !default;
 
 $c-map: (
   'primary':              $c-primary,
