--- a/src/utils/_layout.scss
+++ b/src/utils/_layout.scss
@@ -20,6 +20,7 @@
     padding-left: $w-gutter;
     padding-right: $w-gutter;
   }
+  background-color: $bgc-container;
   margin: 0 auto;
   max-width: $mwi-container;
   padding-left: $w-gutter / 2;
