--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -113,10 +113,11 @@ $p-big: 16px !default;
 $p-huge: 36px !default;
 
 // Layout
-$w-gutter: 24px !default;
+$bgc-container: transparent !default;
 $mwi-container: 1380px !default;
 $mwi-container-medium: 944px !default;
 $mwi-container-small: 400px !default;
+$w-gutter: 24px !default;
 
 // Grid
 $grid-breakpoints: (
