--- a/lib/_settings.scss
+++ b/lib/_settings.scss
@@ -165,6 +165,7 @@ $badges-color-map: (
 $bg-button: $c-primary !default;
 $c-button: $c-white !default;
 $c-button-transparent: $c-primary !default;
+$c-button-outlined: $c-primary !default;
 $bdc-button: $bg-button !default;
 $bd-button: 1px solid $bdc-button !default;
 $bdr-button: 200px !default;
