--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -20,7 +20,7 @@ $c-secondary: #e91e63 !default;
 $c-dark: #18232f !default;
 $c-light: $c-gray-light !default;
 
-$c-text: #607d8b !default;
+$c-text: #272727 !default;
 $c-link: $c-primary !default;
 $c-link-hover: rgba($c-primary, .8) !default;
 
