insert rounded corners var

--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -92,6 +92,7 @@ $bdc-base: #d5d9db !default;
 $bd-medium: 1px solid $bdc-base !default;
 $bdr-base: 3px !default;
 $bdr-medium: $bdr-base !default;
+$bdr-rounded-corners: 5px !default;
 
 // Defaults (HTML elements)
 $fw-strong: $fw-bold !default;
