add text decoration underline utility

--- a/src/utils/_typography.scss
+++ b/src/utils/_typography.scss
@@ -83,6 +83,10 @@ a {
   font-style: italic;
 }
 
+.text-underline {
+  text-decoration: underline;
+}
+
 .text-uppercase {
   text-transform: uppercase;
 }
