feat(utils): deprecate selector

--- a/src/utils/_aligner.scss
+++ b/src/utils/_aligner.scss
@@ -42,7 +42,7 @@
   align-self: flex-end;
 }
 
-.aligner--grow,
-.flex-grow {
+.flex-grow, // deprecated selector
+.aligner--grow {
   flex-grow: 1;
 }
