Fix SASS/SCSS "slash-div"-Deprecation (https://sass-lang.com/documentation/breaking-changes/slash-div)

--- a/src/components/_forms.scss
+++ b/src/components/_forms.scss
@@ -331,7 +331,7 @@ input:-webkit-autofill {
   &-icon {
     fill: $c-form-input-icon;
     height: $size-form-input-icon;
-    margin-top: -$size-form-input-icon / 2;
+    margin-top: -$size-form-input-icon * 0.5;
     position: absolute;
     right: $m-medium;
     top: 50%;
