--- a/src/components/_loading-spinner.scss
+++ b/src/components/_loading-spinner.scss
@@ -18,8 +18,8 @@
   display: block;
   height: $size-loading-spinner;
   left: 50%;
-  margin-left: -$size-loading-spinner / 2;
-  margin-top: -$size-loading-spinner / 2;
+  margin-left: -$size-loading-spinner * 0.5;
+  margin-top: -$size-loading-spinner * 0.5;
   position: fixed;
   top: 50%;
   width: $size-loading-spinner;
@@ -38,7 +38,7 @@
       animation: translateBall1 1s infinite;
       left: 0;
       top: 0;
-      transform: translate3d($size-loading-spinner-inner / 2, $size-loading-spinner-inner / 2, 0);
+      transform: translate3d($size-loading-spinner-inner * 0.5, $size-loading-spinner-inner * 0.5, 0);
     }
 
     &:nth-child(2) {
@@ -89,7 +89,7 @@
   }
 
   50% {
-    transform: translate3d($size-loading-spinner-inner / 2, $size-loading-spinner-inner / 2, 0);
+    transform: translate3d($size-loading-spinner-inner * 0.5, $size-loading-spinner-inner * 0.5, 0);
   }
 
   100% {
@@ -102,7 +102,7 @@
   }
 
   50% {
-    transform: translate3d(-$size-loading-spinner-inner / 2, $size-loading-spinner-inner / 2, 0);
+    transform: translate3d(-$size-loading-spinner-inner * 0.5, $size-loading-spinner-inner * 0.5, 0);
   }
 
   100% {
@@ -116,7 +116,7 @@
   }
 
   50% {
-    transform: translate3d(-$size-loading-spinner-inner / 2, -$size-loading-spinner-inner / 2, 0);
+    transform: translate3d(-$size-loading-spinner-inner * 0.5, -$size-loading-spinner-inner * 0.5, 0);
   }
 
   100% {
@@ -130,7 +130,7 @@
   }
 
   50% {
-    transform: translate3d($size-loading-spinner-inner / 2, -$size-loading-spinner-inner / 2, 0);
+    transform: translate3d($size-loading-spinner-inner * 0.5, -$size-loading-spinner-inner * 0.5, 0);
   }
 
   100% {
