Fix: https://github.com/sierra-library/sierra/issues/78

--- a/src/utils/_breakpoints.scss
+++ b/src/utils/_breakpoints.scss
@@ -71,7 +71,10 @@
       @content;
     }
   } @else {
-    @content;
+    // Largest (last) breakpoint
+    @media (max-width: (map-get($grid-breakpoints, $name) - 1px)) {
+      @content;
+    }
   }
 }
 
